welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:16: error: type mismatch;
 found   : Unit
 required: Int
				if ( speed > 86 ) { 
                                ^caughtSpeeding:11: error: type mismatch;
 found   : Unit
 required: Int
	if ( isBirthday == true ) {
        ^